--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "paginareact",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://switchinhg.github.io/byb/",
+  "homepage":"https://switchinhg.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
