--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.4.18",
     "sweetalert2-react-content": "^5.0.0",
+    "swiper": "^8.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
